Bug 470250 - draw middle border image even if the border width is zero on all four sides r+sr=dbaron